feat: limpeza geral e refatoração de trechos